# cnc-vision

./: CMakeLists.txt  automator.cpp  automator.h  capturecontroller.cpp  capturecontroller.hpp  focusentry.qml  gcodeplayer.cpp  gcodeplayer.h  linedetector.cpp  main.cpp  main.qml  quick.qrc  rayreceiver.cpp  rayreceiver.h  scan.qml  surfacemodel.cpp  surfacemodel.h
